<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StoryHoard</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello World</string>
    <string name="add_chapter_title">Edit Mode</string>
    <string name="add_chapter_edit_text">Enter Text:</string>
    <string name="save">Save</string>
    <string name="all_chapters">All Chapters</string>
    <string name="add_choice_button">Add Choice</string>
    <string name="add_choice">Add Choice</string>
    <string name="existing_chapter">Exist. Chapt</string>
    <string name="new_chapter">New Chapt</string>
    <string name="cancel">Cancel</string>
    <string name="max_limit">max: 20 words</string>
    <string name="connect_choice_to">Connect choice to:</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="type">Story type</string>
    <string name="story">Story title</string>
    <string name="story_description">Story Description</string>
    <string name="new_title">New Story Title</string>
    <string name="new_author">New Story Author</string>
    <string name="new_description">New Story Description</string>
    <string name="add_first_chapter">Add First Chapter</string>
    <string name="add_story_image">Add Story Image</string>
    <string name="story_img_desc">Story specific description image</string>
    <string name="view_first_chapter">Begin Reading</string>
    <string name="add_new_story">Add New Story</string>
    <string name="search_stories">Search Stories</string>
    <string name="edit_story_chapters">Edit Story Chapters</string>
    <string name="story_view_type">Story View Type</string>
    <string name="current_view_type">Current View: </string>
    <string name="story_image_cover">Cover Image</string>
    <string name="publish">Published Stories</string>
    <string name="download">Downloaded Stories</string>
    <string name="my_story">My Stories</string>
    <string name="story_type">Choose a story type</string>
    <string name="view_browse_story">View Story</string>
    <string name="add_chapter_illust">Add Illustration</string>
    <string name="add_photo">Add Photo</string>
    <string name="search_results">Search Results</string>
    <string name="empty">No stories were found!</string>
    <string name="set_random_choice">Set random choice:</string>
    

    <string-array name="view_type_choices">
        <item>My Stories</item>
        <item>Downloaded Stories</item>
        <item>Published Stories</item>
    </string-array>

    <string name="title_activity_viewbrowse_author_stories">ViewbrowseAuthorStories</string>
    <string name="title_activity_view_author_stories">ViewAuthorStoriesActivity</string>
    <string name="title_activity_browse_author_stories">BrowseAuthorStoriesActivity</string>
    <string name="title_activity_view_browse_author_stories">ViewBrowseAuthorStories</string>
    <string name="title_activity_custom_adapter">CustomAdapter</string>
    <string name="title_activity_view_edit_story">ViewEditStoryActivity</string>
    <string name="title_activity_view_edit_chapter">ViewEditChapterActivity</string>
    <string name="title_activity_view_story_settings">ViewStorySettingsActivity</string>
    <string name="title_activity_view_browse_cached_stories">ViewBrowseDownloadedStories</string>
    <string name="title_activity_view_browse_published_stories">ViewBrowsePublishedStories</string>
    <string name="title_activity_view_edit_mode">ViewEditMode</string>
    <string name="title_activity_view_browse_stories">ViewBrowseStories</string>
    <string name="title_viewBrowseStories_MyStories">My Stories</string>
    <string name="title_viewBrowseStories_PublishedStories">Published Stories</string>
    <string name="title_viewBrowseStories_CachedStories">Downloaded Stories</string>
    <string name="title_viewChapter">View Chapter</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="edit_existing_story">Edit Story Content</string>
    <string name="edit_story_metadata">Edit Story Details</string>
    <string name="chapter_content">Dummy Chapter Content</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_view_browse_chapters">All Story Chapters</string>
    <string name="add_new_chapter">Add New Chapter</string>
    <string name="no_text">No text</string>
    <string name="choiceText">Choice Text</string>
    <string name="title_activity_view_search_results">ViewSearchResults</string>
    <string name= "browse_stories">Browse stories</string>
    <string name="publish_story">Publish Story</string>
    <string name="save_changes">Save Changes</string>

</resources>