<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/storyImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/story_img_desc"
        android:src="@android:drawable/alert_dark_frame" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/storyImage"
        android:text="@string/title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/storyTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/title"
        android:hint="@string/new_title" />

    <TextView
        android:id="@+id/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/storyTitle"
        android:text="@string/author"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/storyAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/author"
        android:hint="@string/new_author" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/storyAuthor"
        android:text="@string/story_description"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/storyDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayoutStory"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/description"
        android:hint="@string/new_description" />

    <LinearLayout
        android:id="@+id/linearLayoutStory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/editStory"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_story" />

        <Button
            android:id="@+id/viewFirstChapter"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_first_chapter" />
    </LinearLayout>

</RelativeLayout>