<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/newStoryTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/title"
        android:ems="10"
        android:hint="@string/new_title"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/newStoryTitle"
        android:text="@string/author"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/newStoryAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/author"
        android:ems="10"
        android:hint="@string/new_author"
        android:inputType="text" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/newStoryAuthor"
        android:text="@string/story_description"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/newStoryDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayoutStory"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/description"
        android:ems="10"
        android:hint="@string/new_description"
        android:inputType="textMultiLine" />

    <LinearLayout
        android:id="@+id/linearLayoutStory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/addStoryImage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_story_image" />

        <Button
            android:id="@+id/addFirstChapter"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_first_chapter" />
    </LinearLayout>

</RelativeLayout>