<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/paper_bg"
    android:baselineAligned="false"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/storyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:hint="@string/story"
            android:textColor="#472312"
            android:textSize="30sp"
            android:textIsSelectable="true" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:paddingLeft="25dp"
        android:paddingStart="25dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/authors"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/storyAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_author"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:paddingRight="10dp"
            android:paddingEnd="10dp"
            android:textColor="#6c3f29"
            android:textSize="15sp"
            android:textIsSelectable="true" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingLeft="25dp"
        android:paddingStart="25dp"
        android:text="@string/story_description"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/storyDescription"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="2dp"
        android:layout_weight="0.10"
        android:hint="@string/new_description"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:paddingRight="10dp"
        android:paddingEnd="10dp"
        android:textColor="#6c3f29"
        android:textSize="15sp"
        android:textIsSelectable="true" />

    <Button
        android:id="@+id/viewFirstChapter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="25dp"
        android:text="@string/view_first_chapter" />

</LinearLayout>