<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/paper_bg"
    android:baselineAligned="false"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/newStoryTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:hint="@string/new_title"
            android:inputType="text"
            android:textColor="#472312"
            android:textSize="30sp" />

        <requestFocus />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:paddingLeft="25dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="By:"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/newStoryAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_author"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#6c3f29"
            android:textSize="15sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingLeft="25dp"
        android:text="@string/story_description"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/newStoryDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_weight="0.10"
        android:hint="@string/new_description"
        android:hint="@string/new_description"
        android:inputType="textMultiLine"
        android:paddingLeft="25dp"
        android:textColor="#6c3f29"
        android:textSize="15sp" />

</LinearLayout>

<!-- <LinearLayout
    android:id="@+id/linearLayoutStory"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:orientation="vertical" >

    <Button
        android:id="@+id/addStoryImage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_story_image" />

    <Button
        android:id="@+id/addFirstChapter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_first_chapter" />
 -->